--- a/css/style.css
+++ b/css/style.css
@@ -357,7 +357,11 @@ button:focus {
     }    
 }
 
-@media screen and (max-width:768px){
+@media screen and (min-width: 1100px) and (max-width: 1480px){
+    .bannerheadercs{
+        transform: translate(180px, -10px);
+    }
+
     .btncontactcs{
         width: 100px;
         height: 50px;
@@ -365,7 +369,25 @@ button:focus {
         transform: translate(-30px, 150px);
     }
     .btncvcs{
-        width: 70px;
+        width: 100px;
+        height: 50px;
+        font-size: 16px;
+        transform: translate(-100px, 150px);
+    }
+}
+
+@media screen and (max-width:1100px){
+    .bannerimagecs img{
+        opacity: 0;
+    }
+    .btncontactcs{
+        width: 100px;
+        height: 50px;
+        font-size: 16px;
+        transform: translate(-30px, 150px);
+    }
+    .btncvcs{
+        width: 100px;
         height: 50px;
         font-size: 16px;
         transform: translate(-100px, 150px);
