--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,7 @@
+.cvheadercs{
+    color: #283845;
+    font-weight: 800;
+  }
 .contactheadercs {
     font-family: 'Poppins', sans-serif, 'arial';
     font-weight: 600;
@@ -127,4 +131,8 @@ input[type=checkbox]:checked + label {
 
 .socialiconcs{
     color: #283845;
+}
+
+.socialiconcs:hover{
+    color: #7f4f24;
 }
